k8s/server.template.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: server
  replicas: 2
  template:
    metadata:
      labels:
        app: server
    spec:
      restartPolicy: Always
      containers:
      - name: server
        image: %DOCKER_IMAGE%
        resources:
          requests:
            cpu: "0.1"
            memory: 64Mi
          limits:
            cpu: "0.25"
            memory: 128Mi
        ports:
        - containerPort: %SERVER_PORT%
---
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: server
spec:
  ports:
  - port: %SERVER_PORT%
  selector:
    app: server
  type: ClusterIP
