k8s/server.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: server
  replicas: 2
  template:
    metadata:
      labels:
        app: server
    spec:
      restartPolicy: Always
      containers:
      - name: server
        image: javiergarciagon/trainscoding-server:0.0.3
        resources:
          requests:
            cpu: "0.1"
            memory: 64Mi
          limits:
            cpu: "0.25"
            memory: 128Mi
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: server
  annotations:
    dev.okteto.com/auto-ingress: "true"
  labels:
    app: server
spec:
  ports:
  - port: 8080
  selector:
    app: server
  type: ClusterIP
