k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trainscoding
  annotations:
    dev.okteto.com/generate-host: "true"
    dev.okteto.com/auto-ingress: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
   - host: trainscoding-javiergarciagonzalez.cloud.okteto.net
     http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server
            port:
              number: 8080
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: users
            port:
              number: 8998
  tls:
  - hosts:
    - trainscoding-javiergarciagonzalez.cloud.okteto.net
